--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,12 @@
-// Fonts
-$font-main: 'Raleway', sans-serif;
-$font-accent: 'Playfair Display', serif;
-$font-secondary: 'Roboto', sans-serif;
+:root {
+  // Fonts
+  --font-main: 'Raleway', sans-serif;
+  --font-accent: 'Playfair Display', serif;
+  --font-secondary: 'Roboto', sans-serif;
 
-// Colors
-$dark: #242b33;
-$accent: #d4c17f;
-$white: #fff;
-$footer-bg: #2d343c;
+  // Colors
+  --dark: #242b33;
+  --accent: #d4c17f;
+  --white: #fff;
+  --footer-bg: #2d343c;
+}
