--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,22 +5,34 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap');
 
-html {
+html,
+body,
+#root {
+  width: 100%;
   font-size: 16px;
 }
 
 body {
-  font-family: $font-main;
-  font-size: 1rem;
-  color: $white;
-  background-color: $dark;
+  font-family: var(--font-main);
+  color: var(--white);
+  background-color: var(--dark);
 }
 
 a {
-  color: $white;
+  color: var(--white);
   transition: color 0.2s ease-in-out;
 
   &:hover {
-    color: $accent;
+    color: var(--accent);
   }
+}
+
+#root {
+  position: relative;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
