--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap');
 
+$white: red;
+
 html,
 body,
 #root {
@@ -32,7 +34,8 @@ a {
 }
 
 .container {
-  width: 1140px;
+  width: 100%;
+  max-width: 1170px;
   margin: 0 auto;
   padding: 0 15px;
 }
