--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -42,7 +42,7 @@
 
     background-color: var(--white);
 
-    transition: transform 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 
     &:nth-child(1) {
       top: 0;
@@ -65,7 +65,8 @@
         transform: translate(-50%, -50%) rotate(-45deg);
       }
       &:nth-child(2) {
-        transform: scale(0);
+        transform: translateX(100%);
+        opacity: 0;
       }
       &:nth-child(3) {
         bottom: 50%;
@@ -76,6 +77,36 @@
 }
 
 @media screen and (max-width: $tablet) {
+  .row {
+    &.active {
+      margin-top: 0;
+      padding: 2rem;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      justify-content: start;
+      gap: 5rem;
+      background-color: var(--dark);
+
+      & .nav {
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+
+        font-size: 2rem;
+      }
+
+      & .menu {
+        position: fixed;
+        top: 3rem;
+        right: 15px;
+      }
+    }
+  }
+
   .nav {
     display: none;
     &__btn {
@@ -84,8 +115,8 @@
   }
 }
 
-@media screen and (max-width: $mobile) {
-  .logo {
-    width: 6.25rem;
-  }
-}
+// @media screen and (max-width: $mobile) {
+//   .logo {
+//     width: 6.25rem;
+//   }
+// }
