feat: create benefits block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,3 +39,11 @@ a {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
