--- a/src/components/Benefits/Benefits.module.scss
+++ b/src/components/Benefits/Benefits.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/breakponts';
+
 .wrap {
   padding: 7.5rem 0;
 }
@@ -6,26 +8,74 @@
   margin: 0 auto;
   max-width: 840px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 3.75rem;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  gap: 3.75rem;
 }
 
 .item {
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 3rem;
+  display: grid;
+  grid-template-rows: 5rem 1fr;
+  justify-items: center;
+  justify-self: center;
+  row-gap: 2rem;
 
   text-align: center;
 
+  &__img {
+    height: 80px;
+    // align-self: end;
+
+    img {
+      max-height: 100%;
+    }
+  }
+
   &__title {
+    // align-self: start;
     font-family: var(--font-secondary);
     font-size: 1.25rem;
     font-weight: 300;
     line-height: 1.35;
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .wrap {
+    padding: 4rem 0;
+  }
+
+  .row {
+    grid-template-columns: repeat(2, 250px);
+    column-gap: 2rem;
+    row-gap: 3rem;
+  }
+
+  .item {
+    &__img {
+      height: 60px;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .wrap {
+    padding: 2rem 0;
+  }
+
+  .row {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+  }
+
+  .item {
+    grid-template-columns: 60px minmax(auto, 250px);
+    gap: 2rem;
+    align-items: center;
+    justify-items: start;
+
+    text-align: start;
   }
 }
