--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,13 @@ a {
   padding: 0 15px;
 }
 
+.title-2 {
+  font-family: var(--font-accent);
+  font-size: 2.25rem;
+  font-weight: 700;
+  color: var(--accent);
+}
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
