--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,8 @@
   --accent: #d4c17f;
   --white: #fff;
   --footer-bg: #2d343c;
+  --placeholder: #bebebe;
+  --muted: #e7e7e7;
 
   //Media max-width
   --tablet: 768px;
