--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@
   --footer-bg: #2d343c;
   --placeholder: #bebebe;
   --muted: #e7e7e7;
+  --footer-bg: #2d343c;
 
   //Media max-width
   --tablet: 768px;
