--- a/src/components/Location/Location.module.scss
+++ b/src/components/Location/Location.module.scss
@@ -11,6 +11,11 @@
   background-color: #626262;
 }
 
+.map {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: $tablet) {
   .title {
     margin-bottom: 2rem;
