fix: animation mouse (Intro block)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import './reset';
 @import './variables';
 @import './breakponts';
+@import './animations';
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap');
